
2010-05-17

   * [BUILD] For release version 0.9, the loading of resources was moved to the classloader mechanism.
   * [FEATURE] Using a special code exportSNA, there is now the possible
     to script the export of SNAs to some extend, see SocialNetworkModule.java

2010-05-12
  
   * [FEATURE] Support for Content-type: text/html
   * [FEATURE] Improved export options for SNA graphs

2010-04-24

   * [FEATURE] Improve export of Citations to LaTeX
     using in particular new property "sectionDepths" by which the depth of \section{} etc. can be chosen
     
Example:

export: {
  file: "09-appendix/01-glossary.tex",
  sectionDepths: "chapter,section,subsection,subsubsection,paragraph,subparagraph",
  
  section: {
    title: "Episode Directory",
    code: "episode"
  },
  section: {
    title: "Projects studied",
    code: "project"
  },
  section: {
    title: "Innovations",
    code: "innovation"
  },
  section: {
    title: "Glossary",
    label: "sec:glossary",
    text:
      "This glossary contains all codes and concepts referenced from the text
      using hyperlinks with their associated definitions. The total list of
      codes is naturally much larger because it also includes all those codes
      which arose during conceptual development and which were later on
      discarded or subsumed by richer concepts. % TODO Remove Def.: ",
    
    section: {
      title: "Activities",
      code: "activity"
    },
    section: {
      title: "Concepts",
      code: "concept"
    },
    section: {
      title: "Compliance Enforcement Strategies",
      code: "compliance enforcement"
    },
    section: {
      title: "Episode Outcomes",
      code: "outcome"
    },
    section: {
      title: "Hosting Types",
      code: "hosting type"
    },
    section: {
      title: "Innovation Types",
      code: "innovation type"
    },
    section: {
      title: "Innovation Decision Types",
      code: "innovation decision"
    },
    section: {